--- a/face_config.yaml
+++ b/face_config.yaml
@@ -1,9 +1,21 @@
 DATA_ROOT: '/hdd/lzq/PartA/biosignals_raw'
-MODEL_ROOT: '/hdd/lzq/facetrain/model'
-LOGS_ROOT: '/hdd/lzq/facetrain/logs'
+MODEL_ROOT: '/hdd/sdd/lzq/DLMM_new/model'
+LOGS_ROOT: '/hdd/sdd/lzq/DLMM_new/model/logs'
 GPUID: "0"
 EPOCH: 1000
-BATCH_SIZE: 128
+BATCH_SIZE: 512
 EXTRACT_NUM: 512
+HIDDEN_NUM: 64
 CLASS_NUM: 2
 TRAIN_RIO: 0.9
+DATA_PATHS: [
+  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.1.29/pain2/face","/hdd/sdd/lzq/DLMM_new/dataset/2022.1.29/pain2/label.csv",1],
+  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.2.25/pain1/face","/hdd/sdd/lzq/DLMM_new/dataset/2022.2.25/pain1/label.csv",1],
+  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.2.25/pain2/face","/hdd/sdd/lzq/DLMM_new/dataset/2022.2.25/pain2/label.csv",1],
+  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.2.25/pain3/face","/hdd/sdd/lzq/DLMM_new/dataset/2022.2.25/pain3/label.csv",1],
+  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.2.25/pain4/face","/hdd/sdd/lzq/DLMM_new/dataset/2022.2.25/pain4/label.csv",2],
+  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.5/pain3/face","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.5/label.csv",2],
+  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.5/pain4/face","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.5/label.csv",2],
+  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.5/pain5/face","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.5/label.csv",2]
+  ]
+IS_POINT: True
