face_tcn_frozen_v2

--- a/config/face_config.yaml
+++ b/config/face_config.yaml
@@ -1,18 +1,18 @@
 DATA_ROOT: '/hdd/lzq/PartA/biosignals_raw'
 MODEL_ROOT: '/hdd/sdd/lzq/DLMM_new/model'
 LOGS_ROOT: '/hdd/sdd/lzq/DLMM_new/model/logs'
-MODEL_NAME: 'face_v10.t7'
-GPUID: "0"
+MODEL_NAME: 'face_tcn_frozen_v3.t7'
+GPUID: "2"
 
-EPOCH: 20
-BATCH_SIZE: 512
+EPOCH: 50
+BATCH_SIZE: 64
 
 EXTRACT_NUM: 512
 HIDDEN_NUM: 64
 CLASS_NUM: 2
+TCN_NUM: 32
+TCN_HIDDEN_NUM: [32,16,16,1]
 
-CLS_THRESHOLD: 
-R_THRESHOLD: 0.5
 TRAIN_RIO: 0.9
 DATA_PATHS: [
   ["/hdd/sdd/lzq/DLMM_new/dataset/2022.1.29/pain2/face","/hdd/sdd/lzq/DLMM_new/dataset/2022.1.29/pain2/label.csv",1],
