--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,17 +2,17 @@ DATA_ROOT: '/hdd/lzq/PartA/biosignals_raw'
 MODEL_ROOT: '/hdd/sdd/lzq/DLMM_new/model'
 LOGS_ROOT: '/hdd/sdd/lzq/DLMM_new/model/logs'
 
-MODEL_NAME: 'experts_face_v11.t7'
+MODEL_NAME: 'experts_global_face_v11.t7'
 MODEL_NAME2: 'voice_bio_v11.t7'
 
-CHECKPOINT_NAME: face_time_v11.t7
+CHECKPOINT_NAME: face_time_epoch5_v11.t7
 CHECKPOINT_NAME2: voice_time_v11.t7
 CHECKPOINT_NAME3: bio_v11.t7
 CHECKPOINT_NAME4: bio_v11.t7
 
 GPUID: "6"
 
-EPOCH: 200
+EPOCH: 50
 SUB_EPOCH: 10
 BATCH_SIZE: 64
 TCN_BATCH_SIZE: 1
