--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,24 +1,24 @@
-DATA_ROOT: '/hdd/lzq/PartA/biosignals_raw'
-MODEL_ROOT: '/hdd/sdd/lzq/DLMM_new/model'
-LOGS_ROOT: '/hdd/sdd/lzq/DLMM_new/model/logs'
+DATA_ROOT: \hdd\lzq\PartA\biosignals_raw
+MODEL_ROOT: \hdd\sdd\lzq\DLMM_new\model
+LOGS_ROOT: \hdd\sdd\lzq\DLMM_new\model\logs
 
-MODEL_NAME: 'experts_global_face_v11.t7'
-MODEL_NAME2: 'voice_bio_v11.t7'
+MODEL_NAME: experts_global_face_v11.t7
+MODEL_NAME2: voice_bio_v11.t7
 
 CHECKPOINT_NAME: face_time_epoch5_v11.t7
 CHECKPOINT_NAME2: voice_time_v11.t7
 CHECKPOINT_NAME3: bio_v11.t7
 CHECKPOINT_NAME4: bio_v11.t7
 
-GPUID: "6"
+GPUID: "0"
 
 EPOCH: 50
 SUB_EPOCH: 10
 BATCH_SIZE: 64
 TCN_BATCH_SIZE: 1
 
-FACE_OR_VOICE: "face"
-BIO_MODAL: "bio"
+FACE_OR_VOICE: face
+BIO_MODAL: bio
 
 VGG_OR_RESNET: 1
 EXTRACT_NUM: 512
@@ -37,23 +37,23 @@ PIC_SIZE: 224
 TRAIN_RIO: 0.8
 DATA_PATHS: [
   #2-138
-  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/pain1","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/label.csv",2],
+  [\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\pain1,\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\label.csv,2],
   #139-244
-  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/pain2","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/label.csv",2],
+  [\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\pain2,\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\label.csv,2],
   #255-312
-  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.5/pain3","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/label.csv",2],
+  [\hdd\sdd\lzq\DLMM_new\dataset\2022.3.5\pain3,\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\label.csv,2],
   #313-352
-  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.5/pain4","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/label.csv",2],
+  [\hdd\sdd\lzq\DLMM_new\dataset\2022.3.5\pain4,\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\label.csv,2],
   #353-509
-  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/pain3","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/label.csv",2],
+  [\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\pain3,\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\label.csv,2],
   #510-582
-  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/pain4","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/label.csv",2],
+  [\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\pain4,\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\label.csv,2],
   #583-720
-  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/pain7","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/label.csv",2],
+  [\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\pain7,\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\label.csv,2],
   #721-843
-  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/pain8","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/label.csv",2],
+  [\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\pain8,\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\label.csv,2],
   #844-1049
-  ["/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/pain5","/hdd/sdd/lzq/DLMM_new/dataset/2022.3.23/label.csv",2],
+  [\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\pain5,\hdd\sdd\lzq\DLMM_new\dataset\2022.3.23\label.csv,2],
   ]
 IS_POINT: True
 
