--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,14 +1,15 @@
 DATA_ROOT: \hdd\lzq\PartA\biosignals_raw
 MODEL_ROOT: \hdd\sdd\lzq\DLMM_new\model
 LOGS_ROOT: \hdd\sdd\lzq\DLMM_new\model\logs
+CLUSTER_ROOT: \hdd\sdd\lzq\DLMM_new\model\cluster
 
-MODEL_NAME: experts_zd_voice_v11.t7
+MODEL_NAME: experts_zd_face_v12.t7
 MODEL_NAME2: voice_bio_v11.t7
 
-CHECKPOINT_NAME: experts_zd_face_v11.t7
+CHECKPOINT_NAME: face_time_epoch10_v11.t7
 CHECKPOINT_NAME2: experts_zd_voice_v11.t7
-CHECKPOINT_NAME3: bio_v11.t7
-CHECKPOINT_NAME4: bio_v11.t7
+CHECKPOINT_NAME3: experts_zd_bio_v11.t7
+CHECKPOINT_NAME4: experts_zd_face_v11.t7
 
 GPUID: "0"
 
@@ -17,8 +18,7 @@ SUB_EPOCH: 10
 BATCH_SIZE: 64
 TCN_BATCH_SIZE: 1
 
-FACE_OR_VOICE: voice
-BIO_MODAL: bio
+MODAL: face
 
 VGG_OR_RESNET: 1
 EXTRACT_NUM: 512
