--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,17 +3,17 @@ MODEL_ROOT: \hdd\sdd\lzq\DLMM_new\model
 LOGS_ROOT: \hdd\sdd\lzq\DLMM_new\model\logs
 CLUSTER_ROOT: \hdd\sdd\lzq\DLMM_new\model\cluster
 
-MODEL_NAME: experts_zd_face_4E_v12.t7
+MODEL_NAME: experts_zd_face_
 MODEL_NAME2: voice_bio_v11.t7
 
-CHECKPOINT_NAME: experts_zd_face_v12.t7
+CHECKPOINT_NAME: face_time_epoch10_v11.t7
 CHECKPOINT_NAME2: experts_zd_voice_v11.t7
 CHECKPOINT_NAME3: experts_zd_bio_v11.t7
 CHECKPOINT_NAME4: experts_zd_face_v11.t7
 
 GPUID: "0"
 
-EPOCH: 50
+EPOCH: 10
 SUB_EPOCH: 10
 BATCH_SIZE: 64
 TCN_BATCH_SIZE: 1
@@ -59,3 +59,6 @@ IS_POINT: True
 
 LR: 0.001
 WEIGHT_DELAY: 0.00001
+
+SAMPLE_THRESHOLD: 32
+SCORE_THRESHOLD: 0.2
