--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,17 +3,18 @@ MODEL_ROOT: \hdd\sdd\lzq\DLMM_new\model
 LOGS_ROOT: \hdd\sdd\lzq\DLMM_new\model\logs
 CLUSTER_ROOT: \hdd\sdd\lzq\DLMM_new\model\cluster
 
-MODEL_NAME: experts_zd_face_
+MODEL_NAME: experts_zd_bio_3f2_
 MODEL_NAME2: voice_bio_v11.t7
 
-CHECKPOINT_NAME: face_time_epoch10_v11.t7
-CHECKPOINT_NAME2: experts_zd_voice_v11.t7
-CHECKPOINT_NAME3: experts_zd_bio_v11.t7
+CHECKPOINT_NAME: experts_zd_face_3f2_0G.t7
+CHECKPOINT_NAME2: experts_zd_voice_3f_0G.t7
+CHECKPOINT_NAME3: experts_zd_bio_3f_0G.t7
 CHECKPOINT_NAME4: experts_zd_face_v11.t7
 
 GPUID: "0"
+SEED: 89
 
-EPOCH: 10
+EPOCH: 50
 SUB_EPOCH: 10
 BATCH_SIZE: 64
 TCN_BATCH_SIZE: 1
@@ -21,7 +22,7 @@ TCN_BATCH_SIZE: 1
 MODAL: face
 
 VGG_OR_RESNET: 1
-EXTRACT_NUM: 512
+EXTRACT_NUM: 3
 HIDDEN_NUM: 64
 CLASS_NUM: 9
 
@@ -60,5 +61,6 @@ IS_POINT: True
 LR: 0.001
 WEIGHT_DELAY: 0.00001
 
-SAMPLE_THRESHOLD: 32
+SAMPLE_THRESHOLD: 16
 SCORE_THRESHOLD: 0.2
+CLUSTER_NUM: 3
