--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,13 +3,13 @@ MODEL_ROOT: /hdd/sda/lzq/DLMM_new/model
 LOGS_ROOT: /hdd/sda/lzq/DLMM_new/model/logs
 CLUSTER_ROOT: /hdd/sda/lzq/DLMM_new/model/cluster
 
-MODEL_NAME: experts_face_v100_3f_new_
+MODEL_NAME: experts_face_3f_voice_3f_v100.t7
 MODEL_NAME2: experts_face_voice_v11
 
-CHECKPOINT_NAME: face_time_v100.t7
-CHECKPOINT_NAME2: experts_face_v100_3f_kmeans0G.t7
-CHECKPOINT_NAME3: experts_face_v100_5f_0G.t7
-CHECKPOINT_NAME4: experts_face_voice_v11.t7
+CHECKPOINT_NAME: experts_face_v100_3f_0G.t7
+CHECKPOINT_NAME2: experts_voice_v100_3f_0G.t7
+CHECKPOINT_NAME3: experts_face_3f_voice_5f_v100.t7
+CHECKPOINT_NAME4: experts_face_3f_voice_3f_v100.t7
 
 GPUID: "7"
 SEED: 86
@@ -20,9 +20,9 @@ BATCH_SIZE: 64
 TCN_BATCH_SIZE: 1
 CLUSTER_EPOCH_SIZE_1: 1000
 CLUSTER_EPOCH_SIZE_2: 20
-CLUSTER_NUM: 3
+CLUSTER_NUM: 6
 
-MODAL: face
+MODAL: voice
 
 VGG_OR_RESNET: 1
 EXTRACT_NUM: 3
